--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,11 +3,11 @@
         <div class="content">
             <div id="intro-main">
                 <div id="site-logo">
-                    <img src="/images/irl-logo.png" srcset="/images/irl-logo-high-res.png 2x" alt="">
+                    <img src="/images/irl-logo.png" srcset="/images/irl-logo-high-res.png 2x" alt="IRL">
                 </div>
 
                 <div id="site-title">
-                    <h1>IRL: Because Online Life Is Real Life</h1>
+                    <h1>Because Online Life Is Real Life</h1>
                 </div>
 
                 <div id="site-intro">
