--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,7 +8,7 @@
         <div class="content">
             <div id="intro-main">
                 <div id="site-logo">
-                    <img src="/images/irl-logo.png" srcset="/images/irl-logo-high-res.png 2x" alt="">
+                    <img src="/images/irl-logo.png" srcset="/images/irl-logo-high-res.png 2x" alt="IRL">
                 </div>
 
                 <div id="site-title">
