--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div id="newsletter_submit">
-                    <button id="newsletter_submit" type="submit" class="button">Sign up now</button> <em class="newsletter_promise">We will only send you Mozilla-related information.</em>
+                    <button type="submit" class="button">Sign up now</button> <em class="newsletter_promise">We will only send you Mozilla-related information.</em>
                 </div>
             </form>
 
