--- a/src/scss/includes/fonts/_franklin-gothic.scss
+++ b/src/scss/includes/fonts/_franklin-gothic.scss
@@ -4,7 +4,7 @@
 
 
 @font-face {
-    font-family: 'FranklinGothic';
+    font-family: FranklinGothic;
     font-weight: normal;
     font-style: normal;
     src: url('/fonts/franklingothic-book.woff2') format('woff2'),
@@ -12,7 +12,7 @@
 }
 
 @font-face {
-    font-family: 'FranklinGothic';
+    font-family: FranklinGothic;
     font-weight: bold;
     font-style: normal;
     src: url('/fonts/franklingothic-demi.woff2') format('woff2'),
