--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 
-$font-franklin-gothic: 'FranklinGothic', sans-serif;
+$font-franklin-gothic: FranklinGothic, sans-serif;
 
 $base-font-stack: $font-franklin-gothic;
 $base-font-size: 120%;
