--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,7 @@
         <ul>
             <li><a href="https://www.mozilla.org/privacy/">Privacy Notice</a></li>
             <li><a href="https://www.mozilla.org/privacy/websites/#cookies">Cookies</a></li>
+            <li><a href="/ringtones/">Ringtones</a></li>
         </ul>
         <p>Unless otherwise indicated, IRL Podcast episodes are available from the Mozilla Corporation under the <a href="https://creativecommons.org/licenses/by-sa/3.0/us/" rel="external">Creative Commons Attribution Share-Alike 3.0</a> Unported license, or any later version.</p>
     </div>
