Add SCSS and JS linting (#22) (#160)
* Add SCSS and JS linting (#22)

- copy linting config from bedrock
- add gulp tasks
- edit files to pass linting

--- a/src/scss/includes/fonts/_franklin-gothic.scss
+++ b/src/scss/includes/fonts/_franklin-gothic.scss
@@ -4,7 +4,7 @@
 
 
 @font-face {
-    font-family: 'FranklinGothic';
+    font-family: FranklinGothic;
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -13,7 +13,7 @@
 }
 
 @font-face {
-    font-family: 'FranklinGothic';
+    font-family: FranklinGothic;
     font-weight: bold;
     font-style: normal;
     font-display: swap;
