--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,17 +12,16 @@
                 </div>
 
                 <div id="site-title">
-                    <h1>Because Online Life Is Real Life</h1>
+                    <h1>IRL: Online Life is Real Life</h1>
                 </div>
 
                 <div id="site-intro">
                     <p>
-                        Host Manoush Zomorodi shares real stories of life online
-                        and real talk about the future of the Web.
+                        Host Manoush Zomorodi shares real stories of life online and real talk about the future of the Web.
                     </p>
 
                     <p>
-                        IRL is an original podcast from Mozilla, maker of Firefox and always fighting for you.
+                        IRL is an original podcast from Firefox.
                     </p>
                 </div>
 
