--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -1,16 +1,15 @@
 <div id="newsletter-wrapper">
     <div id="newsletter-inner-wrapper">
-        <h2>Get Involved IRL</h2>
+        <h2>Stay up-to-date on IRL and Firefox</h2>
 
         <p>
-            Sign up for the Mozilla newsletter to hear more, learn more, and raise your
-            voice for a healthy Internet.
+            Sign up for our newsletter.
         </p>
 
         <div class="newsletter js-collapse">
             <form id="newsletter_form" name="newsletter_form" action="https://www.mozilla.org/en-US/newsletter/" method="post">
                 <input type="hidden" id="fmt" name="fmt" value="H">
-                <input id="id_newsletters" maxlength="100" name="newsletters" value="mozilla-foundation" type="hidden">
+                <input id="id_newsletters" maxlength="100" name="newsletters" value="mozilla-and-you" type="hidden">
 
                 <div id="newsletter_errors" class="newsletter_errors"></div>
 
@@ -23,7 +22,7 @@
                 </div>
 
                 <div id="newsletter_submit">
-                    <button type="submit" class="button">Sign up now</button> <em class="newsletter_promise">We will only send you Mozilla-related information.</em>
+                    <button type="submit" class="button">Sign up now</button> <em class="newsletter_promise">By signing up, you will receive emails about IRL episodes, news and views from Firefox, and updates about Firefox products. You may unsubscribe at any time.</em>
                 </div>
             </form>
 
