--- a/layouts/partials/google-analytics.html
+++ b/layouts/partials/google-analytics.html
@@ -4,7 +4,7 @@
 
         // If doNotTrack is not enabled, it is ok to add GTM
         // @see https://bugzilla.mozilla.org/show_bug.cgi?id=1217896 for more details
-        if(!navigator.doNotTrack == 1) {
+        if(navigator.doNotTrack !== 1) {
             (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
                 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -14,5 +14,5 @@
             // still need the object to avoid errors
             window.dataLayer = [];
         }
-    });
+    })();
 </script>
