--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -46,10 +46,17 @@
     <link rel="canonical" href="{{ .Permalink }}">
 
     <script src="/js/{{ index .Site.Data.js.hash "pre-render-min.js" }}"></script>
-    <script src="/js/{{ index .Site.Data.js.hash "mozilla.dnt-helper-min.js" }}"></script>
 
     {{ if eq (getenv "HUGO_ENV") "production" }}
         {{ partial "google-analytics.html" . }}
+    {{ else }}
+        <script>
+            (function() {
+                'use strict';
+                // avoid JS errors if no GA
+                window.dataLayer = [];
+            })();
+        </script>
     {{ end }}
 </head>
 
