--- a/layouts/partials/google-analytics.html
+++ b/layouts/partials/google-analytics.html
@@ -1,15 +1,18 @@
 <script>
-    (function(Mozilla) {
+    (function() {
         'use strict';
 
         // If doNotTrack is not enabled, it is ok to add GTM
         // @see https://bugzilla.mozilla.org/show_bug.cgi?id=1217896 for more details
-        if (typeof Mozilla.dntEnabled === 'function' && !Mozilla.dntEnabled()) {
+        if(navigator.doNotTrack !== 1) {
             (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
                 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
             })(window,document,'script','dataLayer','{{ .Site.GoogleAnalytics }}');
+        } else {
+            // still need the object to avoid errors
+            window.dataLayer = [];
         }
-    })(window.Mozilla);
+    })();
 </script>
