--- a/layouts/episodes/single.html
+++ b/layouts/episodes/single.html
@@ -14,7 +14,7 @@
                     'replace' below is to ensure correct local link across local, dev, and prod URLs.
                     Front matter does not allow variables, so we need to do string substitution.
                 */}}
-                <p>{{ (replace .Params.showNotes "!!baseurl!!" .Site.BaseURL) | markdownify }}</p>
+                <p>{{ (replace .Params.shownotes "!!baseurl!!" .Site.BaseURL) | markdownify }}</p>
             </section>
             {{ end }}
 
