--- a/layouts/partials/episode-module.html
+++ b/layouts/partials/episode-module.html
@@ -53,8 +53,7 @@
         <li><a class="episode-action icon icon-twitter" data-service="twitter" href="https://www.twitter.com/intent/tweet?url={{ .context.Permalink }}&amp;text=IRL Podcast: {{ .context.Title }} {{ .context.Scratch.Get "host" }}" data-link-type="social share" data-link-name="Twitter">Share on Twitter</a></li>
         <li><a class="episode-action icon icon-facebook" data-service="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .context.Permalink }}" data-link-type="social share" data-link-name="Facebook">Share on Facebook</a></li>
         <li class="js-action-copy">
-            <a class="episode-action icon icon-copylink" data-service="copylink" href="{{ .context.Permalink }}" data-link-type="social share" data-link-name="copylink" data-clipboard-target="#episode-url-input-{{ .context.Params.number }}">Copy Link</a>
-            <input readonly type="text" class="episode-url-input" id="episode-url-input-{{ .context.Params.number }}" value="{{ .context.Permalink }}">
+            <a class="episode-action icon icon-copylink" data-service="copylink" href="{{ .context.Permalink }}" data-link-type="social share" data-link-name="copylink" data-clipboard-text="{{ .context.Permalink }}">Copy Link</a>
             <div class="episode-copy-ok">URL copied to clipboard</div>
         </li>
         <li><a class="episode-action icon icon-download" data-service="download" href="{{ .context.Params.mp3 }}" rel="external noopener noreferrer">Download MP3</a></li>
