Wrong firefox link in inro.html

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -2,7 +2,7 @@
     <div class="c-intro-main">
 
         <div class="c-intro-logo">
-            <a href="https://www.mozilla.org/de/firefox/"><img src="/images/firefox.png" alt="Firefox" width="93" height="47"></a>
+            <a href="https://www.mozilla.org/firefox/"><img src="/images/firefox.png" alt="Firefox" width="93" height="47"></a>
         </div>
 
         <h1 class="c-intro-title">IRL: Online Life is Real Life</h1>
