Switch Firefox Sharp to Inter

--- a/src/scss/includes/_variables.scss
+++ b/src/scss/includes/_variables.scss
@@ -4,7 +4,7 @@
 
 
 $font-inter: Inter, sans-serif;
-$font-brand: Firefox, sans-serif;
+$font-brand: $font-inter;
 
 $heading-font-stack: $font-brand;
 $heading-font-size: 100%;
