--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -43,6 +43,13 @@
                                                         </a>
                                                     </div>
                                                 </li>
+                                                <li>
+                                                    <div class="mzp-c-menu-item ">
+                                                        <a class="mzp-c-menu-item-link" href="/season5/">
+                                                            <h4 class="mzp-c-menu-item-title">Season Five</h4>
+                                                        </a>
+                                                    </div>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
