Season 5 Listner Survey

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,6 +42,7 @@
     <meta name="apple-itunes-app" content="app-id=1247652431, affiliate-data=at=1010lbVy&amp;ct=mozilla_smart_banner">
 
     <link rel="stylesheet" href="/css/{{ index .Site.Data.css.hash "irlpodcast.css" }}" />
+    <link rel="stylesheet" href="/css/{{ index .Site.Data.css.hash "survey.css" }}" />
     <link rel="alternate" type="application/rss+xml" title="{{ htmlEscape .Site.Title }}" href="https://feeds.mozilla-podcasts.org/irl">
     <link rel="canonical" href="{{ .Permalink }}">
 
@@ -74,6 +75,8 @@
 
     {{ partial "footer.html" }}
 
+    {{ partial "survey.html" }}
+
     <script src="/js/{{ index .Site.Data.js.hash "libs/jquery.3.2.1.min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "libs/clipboard.min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "libs/mozilla.lazy-load-min.js" }}"></script>
@@ -81,5 +84,10 @@
     <script src="/js/{{ index .Site.Data.js.hash "libs/protocol-min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "main-min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "protocol-init-min.js" }}"></script>
+    {{/*
+        survey related JS
+    */}}
+    <script src="/js/{{ index .Site.Data.js.hash "libs/mozilla.cookies-min.js" }}"></script>
+    <script src="/js/{{ index .Site.Data.js.hash "survey-min.js" }}"></script>
 </body>
 </html>
