Explicitly subscribe in English (#205)
The form has been working without it but pmac says it's best to be explicit.

--- a/layouts/partials/newsletter.html
+++ b/layouts/partials/newsletter.html
@@ -6,6 +6,7 @@
             <form id="newsletter_form" name="newsletter_form" action="https://www.mozilla.org/en-US/newsletter/" method="post">
                 <input type="hidden" id="fmt" name="fmt" value="H">
                 <input id="id_newsletters" maxlength="100" name="newsletters" value="mozilla-and-you" type="hidden">
+                <intput type="hidden" name="lang" id="id_lang" value="en">
 
                 <div id="newsletter_errors" class="newsletter_errors"></div>
 
