Add dates to episodes

--- a/layouts/partials/episode-module.html
+++ b/layouts/partials/episode-module.html
@@ -41,6 +41,8 @@
     <h2 class="episode-title">{{ (.context.Scratch.Get "episodeNumber") }}: <a href="{{ .context.Permalink }}">{{ .context.Title }}</a></h2>
     {{ end }}
 
+    <div class="episode-date">{{ dateFormat "January 2, 2006" .context.Params.date }}</div>
+
     <div class="episode-image">
         <img src="/images/{{ .context.Scratch.Get "imagePath" }}" srcset="/images/{{ .context.Scratch.Get "imagePathHighRes" }} 2x" alt="">
     </div>
