--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -60,7 +60,7 @@
     {{ end }}
 </head>
 
-<body id="{{ block "bodyID" . }}home{{ end }}">
+<body id="{{ block "bodyID" . }}home{{ end }}" class="mzp-t-firefox">
 
     {{ partial "header.html" }}
 
