--- a/src/scss/base/elements/_document.scss
+++ b/src/scss/base/elements/_document.scss
@@ -7,7 +7,7 @@
 
 body {
     font-size: $base-font-size;
-    color: $color-off-black;
+    color: $color-ink-80;
     font-family: $base-font-stack;
     line-height: $base-line-height;
 }
