--- a/src/scss/base/elements/_links.scss
+++ b/src/scss/base/elements/_links.scss
@@ -27,7 +27,7 @@ a {
     &:focus,
     &:visited:focus {
         background-color: #00ff00;
-        color: $color-off-black;
+        color: $color-ink-80;
     }
 
     &:active,
