--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -11,7 +11,7 @@ $image-path: '/images/protocol';
         '../../../node_modules/@mozilla-protocol/core/protocol/css/components/navigation.scss';
 
 .mzp-c-navigation {
-    background-color: $color-off-black;
+    background-color: $color-ink-80;
     color: $color-green-40;
 }
 
@@ -47,7 +47,7 @@ $image-path: '/images/protocol';
 }
 
 .mzp-c-menu {
-    background-color: $color-off-black;
+    background-color: $color-ink-80;
     color: $color-green-40;
 
     .mzp-c-menu-title {
@@ -95,7 +95,7 @@ $image-path: '/images/protocol';
 }
 
 .mzp-c-menu-panel {
-    background-color: $color-off-black;
+    background-color: $color-ink-80;
     border-top-color: $color-green-90;
     color: $color-green-40;
 
