--- a/src/scss/includes/_mixins.scss
+++ b/src/scss/includes/_mixins.scss
@@ -4,7 +4,7 @@
 
 // section divider
 @mixin section-divider {
-    border-bottom: 2px solid $color-gray-20;
+    border-bottom: 2px solid $color-marketing-gray-20;
     padding-bottom: $layout-md;
     margin-bottom: $layout-md;
 
@@ -29,7 +29,7 @@
 
     a:focus,
     a:visited:focus {
-        color: $color-off-black;
+        color: $color-ink-80;
         background-color: #00ff00;
     }
 
