placeholder content setup for season06

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -50,6 +50,13 @@
                                                         </a>
                                                     </div>
                                                 </li>
+                                                <li>
+                                                    <div class="mzp-c-menu-item ">
+                                                        <a class="mzp-c-menu-item-link" href="/season6/">
+                                                            <h4 class="mzp-c-menu-item-title">Season Six (IHR)</h4>
+                                                        </a>
+                                                    </div>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
