--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,17 +5,33 @@
 {{ define "main" }}
     <section id="episodes">
         <div class="l-content">
-            <h2 class="page-title">Season 5</h2>
+            <h2 class="page-title">Season 6</h2>
             {{- range first 1 (where .Data.Pages "Type" "eq" "episodes") -}}
                 {{/* The dot context below passes the entire episode object */}}
                 {{ partial "episode-module" (dict "context" . "single" "false") }}
             {{- end -}}
             <ul class="episode-summary-list">
                 {{- range after 1 (where .Data.Pages "Type" "eq" "episodes") -}}
-                    {{ if eq (string .Params.season) "5" }}
+                    {{ if eq (string .Params.season) "6" }}
                         {{/* The dot context below passes the entire episode object */}}
                         {{ partial "episode-summary.html" . }}
                     {{ end }}
+                {{- end -}}
+            </ul>
+        </div>
+    </section>
+
+    <section class="season-summaries">
+        <div class="l-content">
+            <h2 class="season-summary-title">Season 5</h2>
+            <ul class="episode-summary-list">
+                {{- range .Data.Pages -}}
+                {{ if eq .Type "episodes" }}
+                {{ if eq (string .Params.season) "5" }}
+                {{/* The dot context below passes the entire episode object */}}
+                {{ partial "episode-summary.html" . }}
+                {{ end }}
+                {{ end }}
                 {{- end -}}
             </ul>
         </div>
