+ Added S06 to menu

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -53,7 +53,7 @@
                                                 <li>
                                                     <div class="mzp-c-menu-item ">
                                                         <a class="mzp-c-menu-item-link" href="/season6/">
-                                                            <h4 class="mzp-c-menu-item-title">Season Six (IHR)</h4>
+                                                            <h4 class="mzp-c-menu-item-title">Season Six</h4>
                                                         </a>
                                                     </div>
                                                 </li>
